deployment/k8s/announcement-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: siakad-announcement-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: siakad-announcement-api
  template:
    metadata:
      labels:
        app: siakad-announcement-api
    spec:
      containers:
        - name: siakad-announcement-api
          image: ghcr.io/coder-repository/announcement-service
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: siakad-announcement-api
spec:
  selector:
    app: siakad-announcement-api
  ports:
    - port: 5007
      targetPort: 5005
