deployment/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: siakad-auth-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: siakad-auth-api
  template:
    metadata:
      labels:
        app: siakad-auth-api
    spec:
      containers:
        - name: siakad-auth-api
          image: ghcr.io/coder-repository/auth-service:20240328024536
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: siakad-auth-api
spec:
  selector:
    app: siakad-auth-api
  ports:
    - port: 5001
      targetPort: 5001
