deployment/k8s/data-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: siakad-data-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: siakad-data-api
  template:
    metadata:
      labels:
        app: siakad-data-api
    spec:
      containers:
        - name: siakad-data-api
          image: ghcr.io/coder-repository/data-service:20240321143959
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: siakad-data-api
spec:
  selector:
    app: siakad-data-api
  ports:
    - port: 5009
      targetPort: 5009
