deployment/k8s/krs-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: siakad-krs-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: siakad-krs-api
  template:
    metadata:
      labels:
        app: siakad-krs-api
    spec:
      containers:
        - name: siakad-krs-api
          image: ghcr.io/coder-repository/krs-service:20240323114642
      imagePullSecrets:
        - name: ghcr-secret

---
apiVersion: v1
kind: Service
metadata:
  name: siakad-krs-api
spec:
  selector:
    app: siakad-krs-api
  ports:
    - port: 5008
      targetPort: 5008
