deployment/k8s/payment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: siakad-payment-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: siakad-payment-api
  template:
    metadata:
      labels:
        app: siakad-payment-api
    spec:
      containers:
        - name: siakad-payment-api
          image: ghcr.io/coder-repository/payment-service:20240328092639
      imagePullSecrets:
        - name: ghcr-secret

---
apiVersion: v1
kind: Service
metadata:
  name: siakad-payment-api
spec:
  selector:
    app: siakad-payment-api
  ports:
    - port: 5004
      targetPort: 5004
