deployment/k8s/schedule-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: siakad-schedule-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: siakad-schedule-api
  template:
    metadata:
      labels:
        app: siakad-schedule-api
    spec:
      containers:
        - name: siakad-schedule-api
          image: ghcr.io/coder-repository/schedule-service:20240323044151
      imagePullSecrets:
        - name: ghcr-secret

---
apiVersion: v1
kind: Service
metadata:
  name: siakad-schedule-api
spec:
  selector:
    app: siakad-schedule-api
  ports:
    - port: 5010
      targetPort: 5005
